新增宏观页面

--- a/src/assets/css/layout.less
+++ b/src/assets/css/layout.less
@@ -218,6 +218,10 @@ footer{
   background: #000;
   opacity: 0.5;
 }
+.overlayNew{
+  .overlay;
+  display: block;
+}
 .markWarp{
   display: none;
   position: fixed;
