--- a/src/assets/css/groupPic.less
+++ b/src/assets/css/groupPic.less
@@ -4,7 +4,7 @@
   font-weight:normal;
 }
 /*图表宽、高*/
-#areaShow,#areaDetail,#ageId,#picId{
+#areaShow,#areaDetail,#ageId,#picId,#proId,#ctId,#laId{
   width: 100%;
   height: 100%;
 }
@@ -118,8 +118,94 @@
     background: #fff;
     box-sizing: border-box;
     .chartWrap{
+      padding-top:10px;
       width: 100%;
       height: 330px;
+    }
+  }
+}
+
+/*加入对比弹框*/
+.addMark{
+  display: block;
+  position: fixed;
+  z-index: 10003;
+  top:50%;
+  left: 50%;
+  margin: -145px 0 0 -330px;
+  width: 660px;
+  height: 290px;
+  background: #fff;
+  .markTitle{
+    padding: 0 16px 0 20px;
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    background: #F7FAFE;
+    border: 1px solid #DDEDFF;
+    box-sizing: border-box;
+
+    h5{
+      float: left;
+      padding-left: 25px;
+      background: url("../images/vadd.png") left center no-repeat;
+      font-size: 14px;
+      font-weight: normal;
+    }
+    .close{
+      margin-top: 11px;
+      width: 17px;
+      height: 17px;
+      background: url("../images/close.png");
+      cursor: pointer;
+      font-size: 0;
+    }
+  }
+  .mainDiv{
+    padding: 10px 20px;
+    width: 100%;
+    height: 180px;
+    box-sizing: border-box;
+    .newAdd{
+      float: left;
+      margin-top:20px;
+      cursor:pointer;
+    }
+    .spanWrap{
+      float: right;
+      padding-right:5px;
+      width:560px;
+      height:100%;
+      overflow:hidden;
+      position: relative;
+      box-sizing: border-box;
+      span{
+        display: inline-block;
+        margin:15px 5px 0 0;
+        padding: 5px 10px;
+        background: #F7FAFE;
+        border: 1px solid #BDDBFF;
+        border-radius: 35px;
+      }
+    }
+  }
+  .btnWrap{
+    width: 200px;
+    margin: 0 auto;
+    .btn{
+      margin-top: 5px;
+      width: 80px;
+      height: 30px;
+      border: 0;
+      border-radius: 3px;
+      color: #252525;
+      cursor: pointer;
+      background: #dddddd;
+      &:last-of-type{
+        float: right;
+        color: #fff;
+        background: #1078f5;
+      }
     }
   }
 }
