--- a/src/assets/css/groupPic.less
+++ b/src/assets/css/groupPic.less
@@ -220,11 +220,16 @@
       }
     }
   }
+  .errorP{
+    margin:0 0 0 90px;
+    height: 14px;
+    font-size:12px;
+    color:rgb(180, 6, 6);
+  }
   .btnWrap{
     width: 200px;
     margin: 0 auto;
     .btn{
-      margin-top: 5px;
       width: 80px;
       height: 30px;
       border: 0;
