设置按钮大小及位置调整

--- a/src/assets/css/layout.less
+++ b/src/assets/css/layout.less
@@ -71,9 +71,9 @@ header{
     float: right;
     .set-mes{
       float: left;
-      margin-right: 10px;
-      width: 23px;
-      height: 23px;
+      margin: 4px 10px 0 0;
+      width: 18px;
+      height: 18px;
       color: #fff;
       font-size: 0;
       background: url(../images/set_icon.png);
@@ -89,7 +89,7 @@ header{
         }
         i{
           float: left;
-          margin: 10px 0 0 5px;
+          margin: 12px 0 0 5px;
           width: 13px;
           height: 6px;
           background: url(../images/down_icon.png);
