echarts图表样式微调

--- a/src/assets/css/index.less
+++ b/src/assets/css/index.less
@@ -11,6 +11,7 @@
       box-sizing: border-box;
     }
     .div-title{
+      position: relative;
       h5{
         padding-left: 40px;
         height: 40px;
@@ -36,6 +37,12 @@
         &.ic6{
           background: url(../images/icon6.png) 10px center no-repeat;
         }
+      }
+      .tagDetailLink{
+        position: absolute;
+        top:15px;
+        right:15px;
+        color: #333;
       }
 
     }
