新增宏观地址判断  区分用户群列表及导航点击  展示不同功能

--- a/src/assets/css/userGroup.less
+++ b/src/assets/css/userGroup.less
@@ -140,6 +140,14 @@
             background: url("../images/tool_delete_hover.png");
           }
         }
+        .macLink{
+          .listDetailLink;
+          width: 13px;
+          background: url("../images/ls_7.png");
+          &:hover{
+            background: url("../images/ls_7.png");
+          }
+        }
         .actInfoLink{
           .listDetailLink;
           width: 13px;
@@ -163,6 +171,9 @@
             display: block;
           }
           .listDeleteBtn{
+            display: block;
+          }
+          .macLink{
             display: block;
           }
           .actInfoLink{
