宏观页面新增url监控  url参数变化重新渲染页面

--- a/src/assets/css/userGroup.less
+++ b/src/assets/css/userGroup.less
@@ -142,10 +142,10 @@
         }
         .macLink{
           .listDetailLink;
-          width: 13px;
-          background: url("../images/ls_7.png");
+          width: 15px;
+          background: url("../images/view1.png");
           &:hover{
-            background: url("../images/ls_7.png");
+            background: url("../images/view2.png");
           }
         }
         .actInfoLink{
