宏观页面样式微调

--- a/src/assets/css/groupPic.less
+++ b/src/assets/css/groupPic.less
@@ -130,6 +130,15 @@
       width: 100%;
       height: 330px;
     }
+    .right{
+      input{
+        float: left;
+        margin:4px 5px 0 15px;
+      }
+      label{
+        float: left;
+      }
+    }
   }
 }
 
