宏观页面 添加对比按钮修改  添加禁用状态

--- a/src/assets/css/groupPic.less
+++ b/src/assets/css/groupPic.less
@@ -44,6 +44,11 @@
       background: url("../../assets/images/vadd_2.png");
       cursor: pointer;
     }
+    .addGroupSapn{
+      float: left;
+      margin:11px 0 0 25px;
+      cursor: pointer;
+    }
   }
 }
 /*地域分布、年龄分布、性别分布*/
