宏观-新增筛选人群可删除功能

--- a/src/assets/css/groupPic.less
+++ b/src/assets/css/groupPic.less
@@ -23,6 +23,7 @@
   .groupNameWrap{
     float: left;
     .biSpanWrap{
+      position: relative;
       padding: 0 20px;
       float: left;
       margin-left:20px;
@@ -37,11 +38,12 @@
       }
     }
     i{
-      float: left;
-      margin:5px 0 0 25px;
-      width: 32px;
-      height: 30px;
-      background: url("../../assets/images/vadd_2.png");
+      position: absolute;
+      right: -2px;
+      top:-2px;
+      width: 15px;
+      height: 15px;
+      background: url("../../assets/images/vclose.png");
       cursor: pointer;
     }
     .addGroupSapn{
