新增用户群详情-用户群名称可修改 宏观页面调整

--- a/src/assets/css/detail.less
+++ b/src/assets/css/detail.less
@@ -81,11 +81,20 @@
                 height: 11px;
                 background: url("../images/edit.png");
               }
+              .editClss{
+                padding:2px;
+                border:1px #ddd solid;
+              }
+              .uneditclass{
+                padding:2px;
+                border:0;
+                background: none;
+              }
               .saveBtn{
                 padding: 2px 10px;
-                background: #ebebe4;
-                border: 1px #a9a9a9 solid;
                 font-size: 13px;
+                background: none;
+                border:0;
                 color: #545454;
                 cursor: pointer;
               }
