用户群页面调整

--- a/src/assets/css/addUserGroup.less
+++ b/src/assets/css/addUserGroup.less
@@ -28,6 +28,7 @@
         .one-span{
           float: left;
           width: 75px;
+          text-align: right;
           background: url("../images/line.png") center right no-repeat;
         }
         .two{
