--- a/src/assets/css/addUserGroup.less
+++ b/src/assets/css/addUserGroup.less
@@ -27,7 +27,8 @@
       .one-li{
         .one-span{
           float: left;
-          width: 75px;
+          padding-right:23px;
+          width: 52px;
           text-align: right;
           background: url("../images/line.png") center right no-repeat;
         }
