--- a/src/assets/css/layout.less
+++ b/src/assets/css/layout.less
@@ -26,6 +26,24 @@ input,select{
   display: block;
 }
 
+/* 设置滚动条的样式 */
+::-webkit-scrollbar {
+  height:10px;
+  width:10px;
+}
+/* 滚动槽 */
+::-webkit-scrollbar-track {
+  border-radius:10px;
+}
+/* 滚动条滑块 */
+::-webkit-scrollbar-thumb {
+  border-radius:10px;
+  background:rgba(0,0,0,0.3);
+}
+::-webkit-scrollbar-thumb:window-inactive {
+  background:rgba(0,0,0,0.3);
+}
+
 header{
   position: relative;
   z-index: 99;
