--- a/src/assets/css/groupPic.less
+++ b/src/assets/css/groupPic.less
@@ -200,7 +200,7 @@
       padding-right:5px;
       width:560px;
       height:100%;
-      overflow-y:scroll;
+      overflow:hidden;
       position: relative;
       box-sizing: border-box;
       .spanAndClose{
