--- a/src/assets/css/groupPic.less
+++ b/src/assets/css/groupPic.less
@@ -94,17 +94,22 @@
 .lineNav{
   margin-top: 10px;
   height: 60px;
-  line-height: 60px;
   background: #F7FAFE;
 
+  .messTsDiv{
+    margin-top:22px;
+  }
   span{
-    padding-bottom: 5px;
-    margin: 0 60px;
+    padding-bottom: 0px;
+    margin-left: 60px;
+    height: 60px;
+    line-height: 60px;
     font-size: 15px;
     font-weight: bold;
     color: #666;
     cursor: pointer;
-    i{
+    box-sizing: border-box;
+    .spanI{
       font-size: 13px;
       font-weight: normal;
       font-style: normal;
@@ -259,5 +264,32 @@
         background: #1078f5;
       }
     }
+  }
+}
+
+.messTsDiv{
+  position: relative;
+  width: 350px;
+  .messIcon{
+    margin:2px 0 0 7px;
+    width: 14px;
+    height: 14px;
+    background: url(../../assets/images/new4.png);
+    cursor: pointer;
+    &:hover{
+      background: url(../../assets/images/new3.png);
+    }
+  }
+  .messConUl{
+    position: absolute;
+    z-index:444;
+    padding:10px;
+    width: 100%;
+    left:25px;
+    top:0;
+    background: rgba(0,0,0,.5);
+    border-radius: 5px;
+    font-size: 12px;
+    color:#fff;
   }
 }
