--- a/src/assets/css/index.less
+++ b/src/assets/css/index.less
@@ -116,6 +116,57 @@
           }
         }
       }
+      .slideDiv{
+        position: relative;
+        width: 100%;
+        padding: 0 26px;
+        box-sizing: border-box;
+        .largWrap2{
+          position: relative;
+          width: 100%;
+          height: 30px;
+          overflow: hidden;
+          .ulWrap{
+            position: absolute;
+            width: 100%;
+            padding: 0 0px;
+            box-sizing: border-box;
+            overflow: hidden;
+            ul{
+              float: left;
+              text-align: center;
+              width: 20%;
+              height: 30px;
+              /*border: 1px yellow solid;*/
+              box-sizing: border-box;
+
+              li{
+                img{
+                  margin: 10px 0 0 0;
+                }
+              }
+            }
+          }
+        }
+
+        .slideIcon{
+          position: absolute;
+          top:30px;
+          display: block;
+          width: 13px;
+          height: 20px;
+          background: url(../images/leftIcon.png);
+
+          &.leftIcon{
+            left: 10px;
+            background: url(../images/leftIcon.png);
+          }
+          &.rightIcon{
+            right: 10px;
+            background: url(../images/rightIcon.png);
+          }
+        }
+      }
     }
     &.mess{
       .hWrap{
