--- a/src/assets/css/addUserGroup.less
+++ b/src/assets/css/addUserGroup.less
@@ -122,7 +122,7 @@
       }
 
       .fourWrap{
-        margin:20px 0;
+        margin:10px 0 20px;
         padding: 0 30px;
         box-sizing: border-box;
         position: relative;
