--- a/src/assets/css/index.less
+++ b/src/assets/css/index.less
@@ -73,7 +73,7 @@
         .largWrap{
           position: relative;
           width: 100%;
-          height: 94px;
+          height: 110px;
           overflow: hidden;
           .ulWrap{
             position: absolute;
@@ -85,13 +85,16 @@
               float: left;
               text-align: center;
               width: 20%;
-              height: 94px;
+              height: 110px;
               /*border: 1px yellow solid;*/
               box-sizing: border-box;
 
               li{
                 img{
                   margin: 10px 0 0 0;
+                }
+                .yesSpan{
+                  color:#1078f5;
                 }
               }
             }
