首页标签关联画像逻辑修改

--- a/src/assets/css/index.less
+++ b/src/assets/css/index.less
@@ -319,10 +319,17 @@
   }
 }
 /*标签关联画像*/
-.indexTabWrap{
+.indexTabelWrapDiv{
+  width: 100%;
   padding:10px;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+.indexTabWrap{
+  box-sizing: border-box;
   .indexTab{
     border: 1px #d0e6ff solid;
+    box-sizing: border-box;
     td,th{
       text-align: center;
       font-weight: normal;
