--- a/src/assets/css/groupPic.less
+++ b/src/assets/css/groupPic.less
@@ -73,6 +73,32 @@
       width: 30%;
       float: right;
       height: 500px;
+      .changUl{
+        width: 100%;
+        display: flex;
+        height: 14px;
+        li{
+          display: inline-block;
+          flex: 1;
+          text-align: center;
+          height: 14px;
+          font-size: 12px;
+          i{
+            margin-right: 5px;
+            display: inline-block;
+            width: 25px;
+            height: 14px;
+            background: #6ea1fc;
+            border-radius: 2px;
+            vertical-align: -3px;
+          }
+          &:nth-of-type(2){
+            i{
+              background: #2fcacc;
+            }  
+          }
+        }
+      }
     }
   }
 }
