新增宏观美易分、美借模块

--- a/src/assets/css/groupPic.less
+++ b/src/assets/css/groupPic.less
@@ -83,6 +83,7 @@
           text-align: center;
           height: 14px;
           font-size: 12px;
+          cursor: pointer;
           i{
             margin-right: 5px;
             display: inline-block;
