宏观地域分布右侧逻辑及样式修改完善

--- a/src/assets/css/groupPic.less
+++ b/src/assets/css/groupPic.less
@@ -93,10 +93,18 @@
             border-radius: 2px;
             vertical-align: -3px;
           }
+          
           &:nth-of-type(2){
             i{
               background: #2fcacc;
             }  
+          }
+          &.noActive{
+            i{
+              background: #ccc;
+            }
+            
+            color:#ccc;
           }
         }
       }
