新增宏观美易分图表显示逻辑

--- a/src/assets/css/groupPic.less
+++ b/src/assets/css/groupPic.less
@@ -4,7 +4,7 @@
   font-weight:normal;
 }
 /*图表宽、高*/
-#areaShow,#areaDetail,#ageId,#picId,#proId,#ctId,#laId{
+#areaShow,#areaDetail,#ageId,#picId,#proId,#ctId,#laId,#fandtId,#loanId,#amtId,#foverId{
   width: 100%;
   height: 100%;
 }
