--- a/src/assets/css/groupPic.less
+++ b/src/assets/css/groupPic.less
@@ -4,7 +4,7 @@
   font-weight:normal;
 }
 /*图表宽、高*/
-#areaShow,#areaDetail,#ageId,#picId,#proId,#ctId,#laId,#fandtId,#loanId,#amtId,#foverId{
+#areaShow,#areaDetail,#ageId,#picId,#proId,#ctId,#laId,#fandtId,#loanId,#amtId,#foverId,#regId,#memId,#applyId,#appTimeId{
   width: 100%;
   height: 100%;
 }
@@ -304,7 +304,7 @@
 
 .messTsDiv{
   position: relative;
-  width: 350px;
+  width: 237px;
   .messIcon{
     margin:2px 0 0 7px;
     width: 14px;
