首页标签关联画像样式修改

--- a/src/assets/css/index.less
+++ b/src/assets/css/index.less
@@ -347,7 +347,7 @@
         padding: 0;
         height: 32px;
 
-        .thDiv{
+        /*.thDiv{
           position: relative;
           width: 100%;
           height: 100%;
@@ -369,7 +369,7 @@
             background: #fff;
             transform: rotate(15deg) translateY(16px) translateX(4px);
           }
-        }
+        }*/
       }
     }
     td{
