用户群增加页面样式微调

--- a/src/assets/css/addUserGroup.less
+++ b/src/assets/css/addUserGroup.less
@@ -304,3 +304,9 @@
   }
 
 }
+
+@media screen and (min-width: 1400px){
+    .addUsers .addUsersLeft .box .one-li .two{
+      max-width: 350px;
+    }
+}
