新增上传白名单弹框

--- a/src/assets/css/layout.less
+++ b/src/assets/css/layout.less
@@ -270,6 +270,10 @@ footer{
       color: #B40606;
     }
   }
+  &.markPush{
+    height: 144px;
+    margin: -72px 0 0 -258px;
+  }
 }
 /*删除弹框*/
 .markDelet{
