新增营销短信效果报告弹框

--- a/src/assets/css/addUserGroup.less
+++ b/src/assets/css/addUserGroup.less
@@ -292,6 +292,9 @@
       background: url("../images/mark_icon1.png") left center no-repeat;
       font-size: 14px;
       font-weight: normal;
+      &.resD{
+        background: url("../images/tool_act_hover.png") left center no-repeat;
+      }
     }
     .close{
       margin-top: 11px;
