--- a/src/assets/css/layout.less
+++ b/src/assets/css/layout.less
@@ -260,6 +260,11 @@ footer{
     height: 486px;
     margin: -243px 0 0 -258px;
   }
+  &.resDetail{
+    width: 600px;
+    height: 440px;
+    margin: -220px 0 0 -300px;
+  }
   &.markDown{
     height: 230px;
     margin: -115px 0 0 -258px;
