--- a/src/assets/css/userGroup.less
+++ b/src/assets/css/userGroup.less
@@ -148,6 +148,14 @@
             background: url("../images/view2.png");
           }
         }
+        .resDetailLink{
+          .listDetailLink;
+          width: 17px;
+          background: url("../images/actIcon.png");
+          &:hover{
+            background: url("../images/actIcon.png");
+          }
+        }
         .actInfoLink{
           .listDetailLink;
           width: 13px;
@@ -177,6 +185,9 @@
             display: block;
           }
           .actInfoLink{
+            display: block;
+          }
+          .resDetailLink{
             display: block;
           }
         }
