--- a/src/assets/css/userGroup.less
+++ b/src/assets/css/userGroup.less
@@ -153,7 +153,7 @@
           width: 17px;
           background: url("../images/actIcon.png");
           &:hover{
-            background: url("../images/actIcon.png");
+            background: url("../images/actIconHover.png");
           }
         }
         .actInfoLink{
