--- a/src/assets/css/addUserGroup.less
+++ b/src/assets/css/addUserGroup.less
@@ -177,10 +177,12 @@
 
     .biWrap{
       position: relative;
-      margin-top: 15px;
-      padding:0px 20px;
+      padding:5px 20px;
       box-sizing: border-box;
       overflow: hidden;
+      .selectSpan{
+        margin-top:10px;
+      }
       h6{
         padding-top: 15px;
       }
