--- a/src/assets/css/groupPic.less
+++ b/src/assets/css/groupPic.less
@@ -4,7 +4,7 @@
   font-weight:normal;
 }
 /*图表宽、高*/
-#areaShow,#areaDetail,#ageId,#picId,#proId,#ctId,#laId,#fandtId,#loanId,#amtId,#foverId,#regId,#memId,#applyId,#appTimeId{
+.mapCharts,#areaShow,#areaDetail,#ageId,#picId,#proId,#ctId,#laId,#fandtId,#loanId,#amtId,#foverId,#regId,#memId,#applyId,#appTimeId{
   width: 100%;
   height: 100%;
 }
@@ -130,28 +130,22 @@
   margin-top: 10px;
   height: 60px;
   background: #F7FAFE;
-
-  .messTsDiv{
-    margin-top:22px;
-  }
-  span{
-    padding-bottom: 0px;
-    margin-left: 60px;
+  .personUl{
     height: 60px;
     line-height: 60px;
-    font-size: 15px;
-    font-weight: bold;
-    color: #666;
+    li{
+      float: left;
+      margin:0 20px;
+      cursor: pointer;
+      &.active{
+        border-bottom:2px #1078F5 solid;
+        box-sizing: border-box;
+      }
+    }
+  }
+  .setDiv{
+    padding:20px 20px 0 0;
     cursor: pointer;
-    box-sizing: border-box;
-    .spanI{
-      font-size: 13px;
-      font-weight: normal;
-      font-style: normal;
-    }
-    &.active{
-      border-bottom: 2px #1078F5 solid;
-    }
   }
 }
 
