宏观macAge组件样式修改  用户群详情样式修改  保存时错误提示修改

--- a/src/assets/css/detail.less
+++ b/src/assets/css/detail.less
@@ -82,10 +82,12 @@
                 background: url("../images/edit.png");
               }
               .editClss{
+                width: 285px;
                 padding:2px;
                 border:1px #ddd solid;
               }
               .uneditclass{
+                width: 285px;
                 padding:2px;
                 border:0;
                 background: none;
